--- a/back/config/packages/lexik_jwt_authentication.yaml
+++ b/back/config/packages/lexik_jwt_authentication.yaml
@@ -2,3 +2,22 @@ lexik_jwt_authentication:
     secret_key: '%env(resolve:JWT_SECRET_KEY)%'
     public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
+    token_ttl: 86400 # token TTL in seconds, defaults to 1 hour
+    user_identity_field: email # key under which the user identity will be stored in the token payload
+    clock_skew: 0
+    allow_no_expiration: false # set to true to allow tokens without exp claim
+
+    # token encoding/decoding settings
+    encoder:
+        # token encoder/decoder service - default implementation based on the lcobucci/jwt library
+        service: lexik_jwt_authentication.encoder.lcobucci
+
+        # encryption algorithm used by the encoder service
+        signature_algorithm: RS256
+    token_extractors:
+        # look for a token as Authorization Header
+        authorization_header:
+            enabled: true
+            prefix: Bearer
+            name: Authorization
+
